# comics_scraper

./: .gitignore  LICENSE  README.md  cli.py  comics.py  comics_scraper.py  downloader.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  release.yml
comics_scraper/: __init__.py  comics.py  downloader.py  link_finder.py  main.py
tests/: test_cli.py  test_link_finder.py
